--- a/resources/tip.xhtml
+++ b/resources/tip.xhtml
@@ -11,13 +11,14 @@
 	<body>
 		<h1>&awesomebar-power-tip.tip.header;</h1>
 		<ul>
-			<li>&awesomebar-power-tip.tip.tabs;</li>
-			<li>&awesomebar-power-tip.tip.bookmarks;</li>
-			<li>&awesomebar-power-tip.tip.tagged;</li>
-			<li>&awesomebar-power-tip.tip.pages-typed;</li>
-			<li>&awesomebar-power-tip.tip.page-titles;</li>
-			<li>&awesomebar-power-tip.tip.web-addresses;</li>
-			<li>&awesomebar-power-tip.tip.browsing-history;</li>
+			<li data-pref="browser.urlbar.restrict.openpage">&awesomebar-power-tip.tip.tabs;</li>
+			<li data-pref="browser.urlbar.restrict.bookmark">&awesomebar-power-tip.tip.bookmarks;</li>
+			<li data-pref="browser.urlbar.restrict.tag">&awesomebar-power-tip.tip.tagged;</li>
+			<li data-pref="browser.urlbar.restrict.typed">&awesomebar-power-tip.tip.pages-typed;</li>
+			<li data-pref="browser.urlbar.match.title">&awesomebar-power-tip.tip.page-titles;</li>
+			<li data-pref="browser.urlbar.match.url">&awesomebar-power-tip.tip.web-addresses;</li>
+			<li data-pref="browser.urlbar.restrict.history">&awesomebar-power-tip.tip.browsing-history;</li>
+			<li data-pref="browser.urlbar.restrict.searches">&awesomebar-power-tip.tip.searches;</li>
 		</ul>
 	</body>
 </html>
